<resources>
    <string name="app_name" translatable="false">Flexbooru</string>
    <string name="app_description">A booru client for Android, support Danbooru, Moebooru, Gelbooru, Sankaku, etc.
    </string>
    <string name="title_posts">Posts</string>
    <string name="title_search">Search</string>
    <string name="title_popular">Popular</string>
    <string name="title_manage_boorus">Manage boorus</string>
    <string name="title_settings">Settings</string>
    <string name="title_booru_config">Booru config</string>
    <string name="title_account">Account</string>
    <string name="title_account_and_booru">Account - %s</string>
    <string name="title_artists">Artists</string>
    <string name="title_pools">Pools</string>
    <string name="title_tags">Tags</string>
    <string name="title_comments">Comments</string>
    <string name="title_muzei">Muzei</string>
    <string name="title_night_mode">Night mode</string>
    <string name="title_copyright">Copyright</string>
    <string name="title_about">About</string>
    <string name="title_tag_blacklist">Tag blacklist</string>
    <string name="title_sauce_nao">SauceNao</string>
    <string name="title_what_anime">What Anime</string>
    <string name="title_history">History</string>
    <string name="history_clear_all">Clear all</string>
    <string name="history_clear_all_content">All history will be cleared.</string>
    <string name="about_app" translatable="false">Flexbooru</string>
    <string name="about_app_version">Version</string>
    <string name="about_app_rate">Rate this app</string>
    <string name="about_app_translation">Translation</string>
    <string name="about_app_translation_summary">Translate this app</string>
    <string name="about_author">Author</string>
    <string name="about_author_email">Email</string>
    <string name="about_author_website">Website</string>
    <string name="about_feedback">Feedback</string>
    <string name="about_feedback_github">Github</string>
    <string name="about_feedback_telegram">Telegram</string>
    <string name="about_feedback_discord">Discord</string>
    <string name="about_feedback_email">Email</string>
    <string name="about_copyright_and_licenses">Copyright &amp; Licenses</string>
    <string name="about_copyright">Copyright</string>
    <string name="about_app_copyright">App copyright</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_open_source_licenses">Open Source Licenses</string>
    <string name="snackbar_copy_text">` %s ` have been copied to clipboard.</string>
    <string name="action_retry">Retry</string>
    <string name="msg_not_supported">Not supported</string>
    <string name="msg_no_app_to_open_url">Not app to open url</string>
    <string name="msg_file_save_success">The file has been saved as %s</string>
    <string name="msg_your_api_key_is_wrong">Your Api Key is wrong!</string>
    <string name="msg_cloudflare_challenges">Loading failed, please try again later</string>
    <string name="post_transition_name" translatable="false">post_img_%d</string>
    <string name="post_popular_transition_name" translatable="false">post_popular_img_%d</string>
    <string name="post_expand_or_clear">Expand or clear</string>
    <string name="post_add_search_to_muzei">` %s ` have been saved to Muzei.</string>
    <string name="post_download">Download post</string>
    <string name="post_add_to_fav">Add to favorites</string>
    <string name="post_search_by_sauce_nao">Search by SauceNao</string>
    <string name="msg_download_must_enable">Download Manager is needed.</string>
    <string name="msg_path_denied">Save failed! No access to the current path.</string>
    <string name="msg_download_failed">Download failed</string>
    <string name="msg_download_complete">Download complete</string>
    <string name="msg_password_or_hash_salt_wrong">Password or Hash salt is wrong.</string>
    <string name="popular_day">Day</string>
    <string name="popular_week">Week</string>
    <string name="popular_month">Month</string>
    <string name="popular_date">Date</string>
    <string name="popular_date_range">Date range</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_update">Update</string>
    <string name="update_found_update">New update is now available</string>
    <string name="update_version">Version: %s</string>
    <string name="booru_add">Add booru</string>
    <string name="booru_add_from_qr_code">Scan QR code</string>
    <string name="booru_add_from_clipboard">Import from Clipboard</string>
    <string name="booru_add_from_manual_settings">Manual settings</string>
    <string name="booru_add_error">ERROR: Invalid data</string>
    <string name="booru_add_title_dialog">Add this booru?</string>
    <string name="booru_name">Booru name</string>
    <string name="booru_share_by_qr_code">QR code</string>
    <string name="booru_share_by_clipboard">Export to clipboard</string>
    <string name="booru_edit">Edit</string>
    <string name="booru_delete">Delete</string>
    <string name="booru_backup_or_restore">Backup or Restore</string>
    <string name="booru_backup_to_file">Backup to file</string>
    <string name="booru_restore_from_file">Restore from file</string>
    <string name="booru_type_danbooru" translatable="false">Danbooru</string>
    <string name="booru_type_danbooru_one" translatable="false">Danbooru 1.x</string>
    <string name="booru_type_moebooru" translatable="false">Moebooru</string>
    <string name="booru_type_gelbooru" translatable="false">Gelbooru</string>
    <string name="booru_type_gelbooru_legacy" translatable="false">Gelbooru Legacy</string>
    <string name="booru_type_sankaku" translatable="false">Sankaku</string>
    <string name="booru_type_shimmie" translatable="false">Shimmie 2.x</string>
    <string name="booru_type_unknown" translatable="false">Unknown</string>
    <string name="booru_config_delete">Delete</string>
    <string name="booru_config_apply">Apply</string>
    <string name="booru_config_name">Name</string>
    <string name="booru_config_info">Booru info</string>
    <string name="booru_config_scheme">Scheme</string>
    <string name="booru_config_scheme_http" translatable="false">http</string>
    <string name="booru_config_scheme_https" translatable="false">https</string>
    <string name="booru_config_host">Host</string>
    <string name="booru_config_path">Path</string>
    <string name="booru_config_type">Type</string>
    <string name="booru_config_hash_salt">Hash salt</string>
    <string name="booru_config_name_cant_empty">The name cannot be empty.</string>
    <string name="booru_config_host_cant_empty">The host cannot be empty.</string>
    <string name="booru_config_host_invalid">Invalid host.</string>
    <string name="booru_config_hash_salt_cant_empty">The hash salt cannot be empty.</string>
    <string name="booru_config_dialog_title_delete">Are you sure you want to remove this booru?</string>
    <string name="booru_config_hash_salt_must_contain_yp">Hash salt must contain text: your-password</string>
    <string name="scaner_scan_qr_code">Scan QR code</string>
    <string name="scaner_add_booru_permission_required">Camera permission is required for scanning QR code.</string>
    <string name="browse_toolbar_title">Post</string>
    <string name="browse_toolbar_title_and_id" translatable="false">Post %d</string>
    <string name="browse_add_to_fav">Add to favorites</string>
    <string name="browse_download">Download</string>
    <string name="browse_set_as">Set as</string>
    <string name="browse_send_file">Send file</string>
    <string name="browse_save_file">Save file</string>
    <string name="browse_save_as">Save as…</string>
    <string name="browse_share_link">Share link</string>
    <string name="browse_open_in_browser">Open in browser</string>
    <string name="browse_unsupported_format">Unsupported format: %s</string>
    <string name="browse_tags">Tags</string>
    <string name="browse_info">Info</string>
    <string name="browse_recommended">Recommended</string>
    <string name="browse_comment">Comment</string>
    <string name="browse_tag_exclude">Exclude</string>
    <string name="browse_tag_include">Include</string>
    <string name="browse_info_source">Source</string>
    <string name="browse_info_rating">Rating</string>
    <string name="browse_info_rating_safe">Safe</string>
    <string name="browse_info_rating_questionable">Questionable</string>
    <string name="browse_info_rating_explicit">Explicit</string>
    <string name="browse_info_rating_general">General</string>
    <string name="browse_info_rating_sensitive">Sensitive</string>
    <string name="browse_info_score">Score</string>
    <string name="browse_info_parent">Parent</string>
    <string name="browse_info_title">Information</string>
    <string name="browse_info_url_open">Open url</string>
    <string name="browse_info_url_download">Download url</string>
    <string name="title_account_config">Account Config</string>
    <string name="title_account_config_and_booru">Account Config - %s</string>
    <string name="account_username">Username</string>
    <string name="account_password">Password</string>
    <string name="account_api_key">Api key</string>
    <string name="account_forgot_password">Forgot password?</string>
    <string name="account_forgot_api_key">What is my Api key?</string>
    <string name="account_set">Set account</string>
    <string name="account_user_id">ID: %d</string>
    <string name="account_user_avatars" translatable="false">%s://%s/data/avatars/%d.jpg</string>
    <string name="settings_night_mode">Night mode</string>
    <string name="settings_safe_mode">Safe mode</string>
    <string name="settings_page_limit">Page limit</string>
    <string name="settings_muzei_limit">Muzei limit</string>
    <string name="settings_muzei_size">Muzei size</string>
    <string name="settings_detail_size">Detail size</string>
    <string name="settings_download_size">Download size</string>
    <string name="settings_download_path">Download path</string>
    <string name="settings_grid_width">Grid width</string>
    <string name="settings_show_info_bar">Show info bar</string>
    <string name="settings_show_all_tags">Show tags for all sites</string>
    <string name="settings_auto_hide_bottom_bar">Auto hide bottom bar</string>
    <string name="settings_clear_cache">Clear cache</string>
    <string name="settings_clear_cache_summery">Remove all cached files.</string>
    <string name="settings_muzei">Muzei</string>
    <string name="settings_display">Display</string>
    <string name="settings_options">Options</string>
    <string name="settings_storage">Storage</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="switch_yes">Yes</string>
    <string name="switch_no">No</string>
    <string name="purchase_info_title">Remove ads and unlock full features</string>
    <string name="purchase_info_remove_ads">* Remove ads</string>
    <string name="purchase_info_unlock_full_features">* Unlock full features</string>
    <string name="purchase_info_features">1. Remove the limit of the available booru.\n2. Download pool\'s zip archive of
        moebooru.\n3. Backup &amp; Restore boorus from file.\n4. Reverse search by SauceNao.
    </string>
    <string name="purchase_pay_title">Pay/Restore purchase</string>
    <string name="purchase_pay_google_play">Google Play</string>
    <string name="purchase_pay_order_code" translatable="false">兑换码</string>
    <string name="purchase_pay_alipay">Alipay</string>
    <string name="sauce_nao_help">Help</string>
    <string name="sauce_nao_change_api_key">Change api key</string>
    <string name="sauce_nao_get_api_key">Get api key</string>
</resources>