<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019. by onlymash <im@fiepi.me>, All rights reserved
  ~
  ~ This program is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by the Free Software
  ~ Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:key="about_screen"
        app:initialExpandedChildrenCount="4">

    <PreferenceCategory
            app:key="flexbooru"
            app:title="@string/about_app">

        <Preference
                app:key="about_app_version"
                app:title="@string/about_app_version"
                app:summary="%s"/>
        <Preference
                app:key="about_app_translation"
                app:title="@string/about_app_translation"
                app:summary="@string/about_app_translation_summary"/>
        <Preference
                app:key="about_app_rate"
                app:title="@string/about_app_rate"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:key="author"
            app:title="@string/about_author">

        <Preference
                app:key="about_author_website"
                app:title="@string/about_author_website"
                app:summary="https://blog.fiepi.com"/>
        <Preference
                app:key="about_author_email"
                app:title="@string/about_author_email"
                app:summary="im@fiepi.me"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:key="feedback"
            app:title="@string/about_feedback">

        <Preference
                app:key="about_feedback_telegram"
                app:title="@string/about_feedback_telegram"
                app:summary="https://t.me/Flexbooru"/>
        <Preference
                app:key="about_feedback_discord"
                app:title="@string/about_feedback_discord"
                app:summary="https://discord.gg/zxAX5Jh"/>
        <Preference
                app:key="about_feedback_email"
                app:title="@string/about_feedback_email"
                app:summary="feedback@fiepi.me"/>
        <Preference
                app:key="about_feedback_github"
                app:title="@string/about_feedback_github"
                app:summary="https://github.com/flexbooru/flexbooru/issues"/>
    </PreferenceCategory>

    <PreferenceCategory
            app:key="copyright"
            app:title="@string/about_copyright">

        <Preference
                app:key="about_licenses"
                app:title="@string/about_licenses"
                app:summary="@string/about_open_source_licenses"
                app:icon="@drawable/ic_copyright_24dp"/>
    </PreferenceCategory>
</PreferenceScreen>