<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020. by onlymash <im@fiepi.me>, All rights reserved
  ~
  ~ This program is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by the Free Software
  ~ Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_browse_set_as"
        android:title="@string/browse_set_as"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_browse_share"
        android:title="@string/browse_share_link"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_browse_send"
        android:title="@string/browse_send_file"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_browse_open_browser"
        android:title="@string/browse_open_in_browser"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_browse_download"
        android:title="@string/browse_download"
        app:showAsAction="never"/>
</menu>