<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020. by onlymash <fiepi.dev@gmail.com>, All rights reserved
  ~
  ~ This program is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by the Free Software
  ~ Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="booru_config_screen">

    <EditTextPreference
        app:key="booru_config_name"
        app:title="@string/booru_config_name"
        app:singleLine="true"
        app:useSimpleSummaryProvider="true"/>

    <PreferenceCategory
        app:key="booru_info"
        app:title="@string/booru_config_info">

        <ListPreference
            app:key="booru_config_type"
            app:title="@string/booru_config_type"
            app:icon="@drawable/ic_class_24dp"
            app:entries="@array/booru_type_entries"
            app:entryValues="@array/booru_type_entries_values"
            app:defaultValue="danbooru"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:key="booru_config_scheme"
            app:title="@string/booru_config_scheme"
            app:icon="@drawable/ic_https_24dp"
            app:entries="@array/booru_scheme_entries"
            app:entryValues="@array/booru_scheme_entries_values"
            app:defaultValue="https"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="booru_config_host"
            app:title="@string/booru_config_host"
            app:singleLine="true"
            app:icon="@drawable/ic_domain_24dp"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="booru_config_path"
            app:title="@string/booru_config_path"
            app:singleLine="true"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="booru_config_hash_salt"
            app:title="@string/booru_config_hash_salt"
            app:singleLine="true"
            app:icon="@drawable/ic_enhanced_encryption_24dp"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>