<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020. by onlymash <fiepi.dev@gmail.com>, All rights reserved
  ~
  ~ This program is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by the Free Software
  ~ Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/action_date"
            android:icon="@drawable/ic_event_24dp"
            android:title="@string/popular_date"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_date_range"
            android:title="@string/popular_date_range"
            android:icon="@drawable/ic_event_note_24dp"
            app:showAsAction="ifRoom">
        <menu>
            <item
                    android:id="@+id/action_day"
                    android:icon="@drawable/ic_today_outline_24dp"
                    android:title="@string/popular_day"/>

            <item
                    android:id="@+id/action_week"
                    android:icon="@drawable/ic_view_week_outline_24dp"
                    android:title="@string/popular_week"/>

            <item
                    android:id="@+id/action_month"
                    android:icon="@drawable/ic_event_note_24dp"
                    android:title="@string/popular_month"/>
        </menu>
    </item>
</menu>