<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:icon="@drawable/ic_help_outline_24dp"
            android:title="@string/sauce_nao_help"
            app:showAsAction="ifRoom">
        <menu>
            <item
                    android:id="@+id/action_sauce_nao_change_api_key"
                    android:icon="@drawable/ic_edit_24dp"
                    android:title="@string/sauce_nao_change_api_key"/>
            <item
                    android:id="@+id/action_sauce_nao_get_api_key"
                    android:icon="@drawable/ic_open_in_new_24dp"
                    android:title="@string/sauce_nao_get_api_key"/>
        </menu>
    </item>
</menu>